# mcp-molMIM

./: .gitignore  Dockerfile  LICENSE  README.md  __init__.py  docker-compose.yml  entrypoint.sh  examples.py  mcp_config.json  pyproject.toml  requirements.txt  server.py  test_interpolation.py  test_mcp.py  test_server.py  transport_configs.json
