[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molmim-mcp"
version = "1.0.0"
description = "A Model Context Protocol server for NVIDIA MolMIM (Molecular Masked Image Modeling)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MolMIM MCP Team", email = "molmim-mcp@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "typing-extensions>=4.0.0",
]

[project.scripts]
molmim-mcp = "molmim_mcp.server:main"

[project.urls]
Homepage = "https://github.com/your-org/molmim-mcp"
Repository = "https://github.com/your-org/molmim-mcp"
Documentation = "https://modelcontextprotocol.io/"
Issues = "https://github.com/your-org/molmim-mcp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["molmim_mcp*"]
